--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   --primary: #b6895b;
   --bg: #010101;
 }
- /*  */
+/*  */
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +16,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   color: #fff; /* semua tulisan default warna putih */
-  /* min-height: 2000px;  */
+  min-height: 2000px;
 }
 
 .navbar {
@@ -101,8 +101,8 @@ body {
   align-items: center; /* vertical */
   background-image: url('../img/header-bg.jpeg');
   background-repeat: no-repeat;
-  background-size: cover; 
-  background-position: center; 
+  background-size: cover;
+  background-position: center;
   position: relative; /* harus ada kalo childnya absolute */
 }
 
@@ -113,7 +113,11 @@ body {
   width: 100%;
   height: 30%;
   bottom: 0;
-  background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+  background: linear-gradient(
+    0deg,
+    rgba(1, 1, 3, 1) 8%,
+    rgba(255, 255, 255, 0) 50%
+  );
 }
 
 .hero .content {
@@ -154,6 +158,50 @@ body {
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+/* About Section */
+.about {
+  padding: 7rem 7% 1.4rem;
+}
+
+.about h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
+}
+
+.about h2 span {
+  color: var(--primary);
+}
+
+.about .row {
+  display: flex;
+}
+
+.about .row .about-img {
+  flex: 1 1 45rem;
+}
+
+.about .row .about-img img {
+  width: 100%;
+}
+
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+}
+
+.about .row .content h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.3rem;
+  font-weight: 100;
+  line-height: 1.6;
 }
 
 /* Media Queries */
@@ -207,12 +255,32 @@ body {
   }
 
   .navbar .navbar-nav a:hover::after {
-    transform: scaleX(0.2);  /* gapake s, karena bukan transition */
+    transform: scaleX(0.2); /* gapake s, karena bukan transition */
     -webkit-transform: scaleX(0.2);
     -moz-transform: scaleX(0.2);
     -ms-transform: scaleX(0.2);
     -o-transform: scaleX(0.2);
-}
+  }
+
+  /* About Section */
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    /* height: 24rem; */
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
 }
 
 /* Mobile Phone */
